--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "huroof-game-improved",
+  "name": "huroof-game-client",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
-    "react-router-dom": "^6.10.0",
-    "react-scripts": "^3.0.1",
     "react-router-dom": "^6.10.0",
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
