--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.6.1"
+    "styled-components": "^5.3.11"
   },
   "scripts": {
     "start": "react-scripts start",
